@@ -1,3 +1,8 @@
+2022-02-28 Gabriele Gorla <gorlik@yahoo.com>
+
+	* sdcc/src/mos6502/gen.c:
+	  Refactor storeRegToAop()
+
 2022-02-28 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* sdas/asz80/z80adr.c,
